--- a/.github/workflows/pushlogdirectory.yml
+++ b/.github/workflows/pushlogdirectory.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Commit and Push Changes
       run: |
-        git config --global user.name 'GitHub Actions'
-        git config --global user.email 'actions@github.com'
+        git config --global user.name 'seyeon-k-k'
+        git config --global user.email 'seyeon1121@naver.com'
         git add log/
         git commit -m "Copy pushed file to 'log' directory by GitHub Actions"
         git push
